fixing right size flexbox alignment

--- a/style.css
+++ b/style.css
@@ -16,13 +16,13 @@
     font-size: 1.2vh;
 }
 #logo{
+    padding-left:7vw;
     width:80%;
     margin-top:40%;
     margin-bottom:5vh
 }
 #right-1row{
     float:right;
-    
     display:flex;
     flex-wrap:wrap;
 }
@@ -79,4 +79,6 @@ nav{
     font-size:2vh;
     border-style: solid;
     border-width: 1.5px;
+    padding:0.5vw;
+
 }
